Clean plugins in order to introduce kame the replacement of dyta
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1660 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/balance.html.haml
+++ b/app/views/accountancy/balance.html.haml
@@ -1,4 +1,5 @@
--max = @current_company.accounts.calculate(:max, "LENGTH(COALESCE(number, ''))").to_i
+-#max = @current_company.accounts.calculate(:max, Account.connection.length("COALESCE(number, '')")).to_i
+-max = @current_company.accounts.maximum(Account.connection.length("COALESCE(number, '')")).to_i
 =form_tag({}, :method=>:get) do
   .search
     %table
