--- a/app/views/accountancy/document_print.html.haml
+++ b/app/views/accountancy/document_print.html.haml
@@ -16,8 +16,12 @@
       -f.field tg(:from), date_field_tag("started_on", @current_company.current_financial_year.started_on)
       -f.field tg(:to),   date_field_tag("stopped_on", @current_company.current_financial_year.stopped_on)
     .actions=submit_tag tg(:export), :name=>:export
-=observe_field "template_code", :update=>:document_options, :url=>{:action=>:document_print}, :with=>"code"
 
 
 
 
+.tmenu
+  %ul
+    %li Menu_item
+    %li Menu item 2
+  %a Test Menu
