--- a/app/views/company/index.html.haml
+++ b/app/views/company/index.html.haml
@@ -14,3 +14,5 @@
       =li_link_to t("actions.#{controller}.index"), :controller=>controller, :action=>:index
 
 =#svg_test_tag
+
+=kame(:entities)
