--- a/app/views/production/land_parcels.html.haml
+++ b/app/views/production/land_parcels.html.haml
@@ -16,7 +16,7 @@
     %table.treemap
       %tr
         -for land_parcel in group.land_parcels_on(session[:viewed_on])
-          %td.plot{:style=>"width: #{land_parcel.area/total_area}%;", :class=>cycle("odd", "even")}
+          %td.plot{:style=>"width: #{100*land_parcel.area/total_area}%;", :class=>cycle("odd", "even")}
             .bmenu
               =link_to(land_parcel.name, {:action=>:land_parcel, :id=>land_parcel.id}, :class=>:name)
               %ul
