--- a/app/views/management/sales_order_summary.html.haml
+++ b/app/views/management/sales_order_summary.html.haml
@@ -8,7 +8,7 @@
 
 -if @sales_order.sales_invoices.size>0
   %h2=tc :sales_invoice
-  =kame :sales_order_sales_invoices
+  =kame :sales_order_invoices
 
 %h2=tc :financial_state
 
