--- a/app/views/management/_outgoing_delivery_form.html.haml
+++ b/app/views/management/_outgoing_delivery_form.html.haml
@@ -6,10 +6,10 @@
   -f.field :outgoing_delivery, :contact_id, :choices=>:delivery_contacts, :new=>{:controller=>:relations, :action=>:contact_create, :entity_id=>@sales_order.client_id} 
   -f.field :outgoing_delivery, :mode_id, :choices=>{:reflection=>:outgoing_delivery_modes}, :new=>{:action=>:outgoing_delivery_mode_create}
   -f.field :outgoing_delivery, :planned_on
-  -f.field :outgoing_delivery, :transporter_id, :choices=>{:reflection=>:transporters, :include_blank=>"--Aucun--"}, :new=>{:controller=>:relations, :action=>:entity_create, :transporter=>1}
+  -f.field :outgoing_delivery, :transporter_id, :choices=>{:reflection=>:transporters, :include_blank=>""}, :new=>{:controller=>:relations, :action=>:entity_create, :transporter=>1}
 %table.kame 
   %tr
-    %th=tc(:product)
+    %th=OutgoingDeliveryLine.human_attribute_name(:product)
     %th=tc(:line_amount)
     %th=tc(:line_amount_with_taxes)
     %th=tc(:unit)
