--- a/app/views/management/_sales_order_form.html.haml
+++ b/app/views/management/_sales_order_form.html.haml
@@ -12,7 +12,7 @@
   -f.field :sales_order, :nature_id, :choices=>{:reflection=>:sales_order_natures}, :new=>{:action=>:sales_order_nature_create}
   -f.field :sales_order, :currency_id, :choices=>{:reflection=>:currencies}
   -f.field :sales_order, :responsible_id, :choices=>{:reflection=>:employees}, :new=>{:controller=>:company, :action=>:user_create, :employed=>1}
-  -f.field :sales_order, :transporter_id, :choices=>{:reflection=>:transporters, :include_blank=>"--Aucun--"}
+  -f.field :sales_order, :transporter_id, :choices=>{:reflection=>:transporters, :include_blank=>""}
   -f.field :sales_order, :comment, :field=>:textarea
   -f.field :sales_order, :letter_format
 =formalize(:id=>:letter_format) do |f|
@@ -23,16 +23,8 @@
   -f.field :sales_order, :conclusion, :field=>:textarea
 
 :javascript
-  window.updateContacts = function(value) {
-    new Ajax.Request('#{url_for(:controller=>:management, :action => :sales_order_contacts)}', {asynchronous:true, evalScripts:true, preferences:'client_id=' + encodeURIComponent(value), onSuccess: function(response) {
-      $('sales_order_contact_id').update(response.responseText);
-      $('sales_order_delivery_contact_id').update(response.responseText); 
-      $('sales_order_invoice_contact_id').update(response.responseText);  
-     }});
-  }
   window.letterInformations = function(){ toggleElement('letter_format', $('sales_order_letter_format').checked); }
   letterInformations();
 
-=#observe_field sales_order_client_id, :frequency=>0.25, :function=>"updateContacts(value)"
 =observe_field sales_order_client_id, :frequency=>0.25,  :update=>"contacts", :url=>{:action=>:sales_order_contacts, :sales_order_id=>@sales_order.id}, :with=>:id
 =observe_field("sales_order_letter_format", :frequency=>0.25, :function=>"letterInformations()")
