Begins to clean management views. Factorize code ahancing sales_order.html.haml Begins to clean purchase order treatment
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1669 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_product_prices.html.haml
+++ b/app/views/management/_product_prices.html.haml
@@ -1,5 +1,5 @@
 =toolbar do |t|
-  -t.link(:sale_price_create, {:action=>:price_create, :mode=>:sales, :product_id=>session[:product_id]}) if @product.for_sales
+  -t.link(:sales_price_create, {:action=>:price_create, :mode=>:sales, :product_id=>session[:product_id]}) if @product.for_sales
   -t.link(:purchase_price_create, {:action=>:price_create, :mode=>:purchases, :product_id=>session[:product_id]}) if @product.for_purchases
 
 =kame :product_prices
