--- a/app/views/management/_sales_order_line_detail_row_form.html.haml
+++ b/app/views/management/_sales_order_line_detail_row_form.html.haml
@@ -1,11 +1,11 @@
 -if product = @sales_order_line.product
-  %table.full-width
+  %table
     %tr
-      %td=tc('quantity')
+      %td=SalesOrderLine.human_attribute_name("quantity")
       -if @current_user.can?(:give_discounts_on_sales_orders) and product.reduction_submissive?
-        %td=tc('discount') 
+        %td=SalesOrderLine.human_attribute_name("reduction_percent") 
       -if product.manage_stocks
-        %td=tl(:stock)
+        %td=SalesOrderLine.human_attribute_name("stock")
     %tr
       %td
         =text_field(:sales_order_line, :quantity, :size=>5)
