--- a/app/views/management/_sales_order_line_row_form.html.haml
+++ b/app/views/management/_sales_order_line_row_form.html.haml
@@ -1,10 +1,12 @@
--price_id = nil
 %fieldset.quick-add
   %legend=tc :add_quickly_a_line
   =form_tag(:action=>:sales_order_line_create) do 
-    =formalize do |f|
-      -price_id = f.field :sales_order_line, :price_id, :choices=>:available_prices
-    #detail-row=render :partial=>"sales_order_line_detail_row_form"
-    .actions=submit_tag(tg(:add))
+    %table.quick
+      %tr
+        %td=SalesOrderLine.human_attribute_name("product")
+        %td#detail-row{:rowspan=>2}=render :partial=>"sales_order_line_detail_row_form"
+        %td{:rowspan=>2}=submit_tag(tg(:add))
+      %tr
+        %td=dyli_tag("sales_order_line[price_id]", :available_prices)
 
-=observe_field(price_id, :update=>"detail-row", :url=>{:action=>:sales_order_line_detail, :order_id=>@sales_order.id, :mode=>:row}, :frequency => 0.25, :with=>"id", :loading=>"onLoading()", :loaded=>"onLoaded()")
+=observe_field("sales_order_line_price_id", :update=>"detail-row", :url=>{:action=>:sales_order_line_detail, :order_id=>@sales_order.id, :mode=>:row}, :frequency => 0.25, :with=>"id", :loading=>"onLoading()", :loaded=>"onLoaded()")
