--- a/app/views/management/purchase_order_summary.html.haml
+++ b/app/views/management/purchase_order_summary.html.haml
@@ -1,10 +1,10 @@
 =purchase_steps
 
 -if @purchase_order.amount_with_taxes > 0
-  %h2=tc :payment_parts
+  %h2=tc :payment_uses
   =toolbar do |t|
     -t.link :outgoing_payment_use_create, :expense_id=>@purchase_order.id if @purchase_order.unpaid_amount > 0
-  =kame :purchase_order_payment_parts
+  =kame :purchase_order_payment_uses
 
 %h2=tc(:purchase_order_lines)
 =kame :purchase_order_lines
